--- a/styles.css
+++ b/styles.css
@@ -4,30 +4,54 @@ body {
   overflow: hidden;
 }
 
-.bg {
-  background-image: url('https://images2.alphacoders.com/530/530093.jpg');
+.background-image {
+  background-image: url('Zoom-Finance.png'); /* Replace 'path/to/your/image.jpg' with your file path */
   background-size: cover;
-  position: absolute;
+  background-position: center;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
 
-.fixed-text {
+.fixed-text,
+.bottom-text {
   position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 100px;
-  color: Navy;
+  left: 7%;
+  transform: translateX(0%);
+  color: #422C2F;
+  text-align: left;
 }
 
-.scrolling-text {
-  position: absolute;
-  top: 18%;
-  left: 20%;
-  transform: translate(-0%, -0%);
-  font-size: 80px;
-  color: Navy;
+.fixed-text {
+  top: 30%;
+}
+
+.bottom-text {
+  bottom: 30%;
+}
+
+.line {
+  font-size: 100px;
+  margin: 15px 0;
+  line-height: 2; /* Adjust line height for better readability */
+}
+
+.line2 {
+  font-size: 90px;
+  margin: 0px 0;
+  line-height: 3; /* Adjust line height for better readability */
+}
+
+
+.name,
+.designation {
+  display: block;
+
+}
+
+.designation {
+  font-size: 50px; /* Adjust font size for the designations */
+  line-height: 1;
 }
