--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .background-image {
-  background-image: url('Zoom-Finance.png'); /* Replace 'path/to/your/image.jpg' with your file path */
+  background-image: url('https://github.com/SMY-Subhash/celebration/blob/main/Zoom-Finance.png'); /* Replace 'path/to/your/image.jpg' with your file path */
   background-size: cover;
   background-position: center;
   position: fixed;
