--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url('background-image.jpg'); /* Replace 'background-image.jpg' with your image file */
+  background-image: url('Zoom-Finance.png'); /* Replace 'background-image.jpg' with your image file */
   background-size: cover;
 }
 
