--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .announcement {
-  background-color: rgba(255, 255, 255, 0.7); /* Adjust the opacity as needed */
+  /* background-color: rgba(255, 255, 255, 0.7);  Adjust the opacity as needed */
   padding: 20px;
   text-align: center;
 }
