--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-image: url('Zoom-Finance.png'); /* Replace 'background-image.jpg' with your image file */
+  background-image: url('Zoom-Finance.png');
   background-size: cover;
 }
 
@@ -15,9 +15,10 @@ body {
 }
 
 .announcement {
-  /* background-color: rgba(255, 255, 255, 0.7);  Adjust the opacity as needed */
+  
   padding: 20px;
   text-align: center;
+  top: 20%;
 }
 
 .announcement h1 {
@@ -33,7 +34,7 @@ body {
 
 .scroll-text {
   animation: scroll 10s linear infinite;
-  font-size:60px;
+  font-size:80px;
   color: #422C2F;
 
 }
