--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,8 @@ body {
   animation: scroll 10s linear infinite;
   font-size:65px;
   color: #422C2F;
+  width: 100%;
+  white-space: nowrap;
 
 }
 
